* Replace Accounting Party by Accounting group

Version 7.2.0 - 2024-04-29
--------------------------
* Bug fixes (see mercurial logs for details)
* Convert recursive calls of reconcile accounts wizard into loop
* Remove active field on journal - period
* Allow modifying period dates with moves

Version 7.0.0 - 2023-10-30
--------------------------
* Bug fixes (see mercurial logs for details)
* Add support for Python 3.12
* Use origin description as fallback description
* Post write-off and exchange moves when reconcile posted lines
* Post cancelled, grouped, rescheduled and delegated moves
* Rename close state to closed
* Ask for date when creating move from template
* Add receivable/payable to company

Version 6.8.0 - 2023-05-01
--------------------------
* Bug fixes (see mercurial logs for details)
* Support reconcile lines with currency exchange
* Add reconcile and unreconcile from general ledger lines
* Always raise exception when fiscal year or period are not found
* Remove support for Python 3.7
* Add support for Python 3.11
* Add reversal option when cancelling move
* Add cumulative balance to payable/receivable lines
* Rename reconciliation name to number
* Accrue and allocate rounding errors when there are multiple taxes
* Use match pattern to find journal
* Display general ledger information on account form

Version 6.6.0 - 2022-10-31
--------------------------
* Bug fixes (see mercurial logs for details)
* Add wizard to delegate move lines to another party
* Support date range context for account type amount
* Use context model for chart of accounts and taxes

Version 6.4.0 - 2022-05-02
--------------------------
* Bug fixes (see mercurial logs for details)
* Prevent creating fiscal year before closed one
* Add automatic reconciliation of suggestions
* Prevent to change the type of journal with posted moves
* Mute reconciled payable/receivable lines
* Add delegated amount on move lines
* Enforce same type for children account as their parent