@@ -1,3 +1,4 @@
+* Allow copying move from closed period
 * Replace Accounting Party by Accounting group
 
 Version 7.2.0 - 2024-04-29
